# bookyourlife

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.json  eas.json  hasilkan-paket-dokumen-perencanaan-sunny-meerkat.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_device_tokens.py  0003_rename_firebase_uid_to_clerk_id.py  0004_user_preferred_language.py  0005_entry_location.py  0006_entry_media.py  0007_ai_image_jobs.py  0008_entry_title.py  0009_reconcile_entry_title.py  0010_user_signup_fields.py  0011_book_illustrations_tweaks.py  0011_book_preview_fields.py  0012_merge_book_preview_heads.py  0013_book_generation_pipeline.py  0014_audio_transcription_jobs.py
backend/app/: config.py  db.py  deps.py  main.py  rate_limit.py
backend/app/models/: __init__.py  _base.py  ai_image_job.py  audio_transcription_job.py  book.py  device_token.py  entry.py  order.py  question.py  user.py
backend/app/prompts/: book_chapter_plan.j2  book_entry_enhancements.j2  book_generation_texts.j2  book_image_prompts.j2  book_preview.j2  daily_question.j2  highlights.j2  image_memory_visual.j2  title_suggestions.j2  writing_prompts.j2
backend/app/schemas/: ai.py  book.py  entry.py  question.py  user.py
backend/app/services/: entries.py  question_generator.py  questions.py  users.py
backend/app/tasks/: async_runner.py  book_gen.py  (+8 more)
backend/tests/: conftest.py  test_book_generation.py  test_health.py  test_security.py
(+75 files in other folders)
