[project]
name = "lifebook-backend"
version = "0.1.0"
description = "Life Book API + AI orchestration"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pgvector>=0.3",
    "psycopg2-binary>=2.9",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "python-jose[cryptography]>=3.3",
    "openai>=1.54",
    "replicate>=1.0",
    "boto3>=1.35",
    "httpx>=0.27",
    "jinja2>=3.1",
    "langdetect>=1.0.9",
    "playwright>=1.45",
    "tenacity>=9.0",
    "structlog>=24.4",
    "python-multipart>=0.0.12",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC", "PL", "RUF"]
ignore = ["S101", "PLR0913"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
